shesmu-server/src/test/resources/bad/ternaryif-result-types-not-matching.shesmu
Input test;

Olive Run ok With ok = (True ? 3 : "4") == 3  ;
